<resources>
    <string name="app_name">MACHINE INC.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="error_empty_field">This field is required</string>
    <string name="next">NEXT</string>
    <string name="log_out"><u >LOG OUT</u></string>

    <string-array name="type_role">
        <item>-- Select Type --</item>
        <item>Worker</item>
        <item>Manager</item>
        <item>Technician</item>
    </string-array>

    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>