<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/picture_2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:background="@drawable/background_home"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                android:paddingTop="30dp"
                android:paddingBottom="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_gravity="end"
                    android:paddingHorizontal="30dp"
                    android:background="@drawable/background_edit_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"/>



                <EditText
                    android:id="@+id/register_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    android:background="@drawable/background_edit_text"
                    android:layout_marginTop="20dp"/>


                <EditText
                    android:id="@+id/register_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/background_edit_text"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>